[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Resume" type="Button" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_right = 0.5
margin_left = -186.0
margin_top = 172.87
margin_right = 186.0
margin_bottom = 238.87
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Resume"
flat = true

[node name="Options" type="Button" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -33.0
margin_right = 216.0
margin_bottom = 33.0
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Options"
flat = true

[node name="Main" type="Button" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -276.0
margin_top = -239.41
margin_right = 276.0
margin_bottom = -173.41
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Main Menu"
flat = true

[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Main" to="." method="_on_Main_Menu_pressed"]
